Debug lose condition